# ITMO_ICT_WebDevelopment_tools_2024-2025

./: 404.html  auth.py  connection.py  index.html  main.py  mkdocs.yml  models.py  pyproject.toml
api/auth/: index.html
api/projects/: index.html
api/skills/: index.html
api/tasks/: index.html
api/teams/: index.html
api/users/: index.html
development/async_database/: index.html
development/database/: index.html
development/setup/: index.html
docs/labs/: lab2.md
labs/lab1/: index.html
labs/lab2/: index.html
labs/lab3/: index.html
migrations/versions/: 20240917_initial_schema.py
search/: search_index.json
